# quipu

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  SPEC.md  justfile
.github/workflows/: ci.yml
artifacts/benchmarks/: BENCHMARK_REPORT.md
core/: README.md  build.zig
core/src/: answer_synthesis.zig  extractor.zig  in_memory_storage.zig  jobs.zig  lattice_storage.zig  main.zig  protocol.zig  providers.zig  runtime.zig  schema.zig  storage.zig  streams.zig  tests.zig
docs/: algorithms.md  api.md  architecture.md  benchmark-results.md  data-model.md  evals.md  implementation-plan.md  plugins.md  providers.md  publication.md  security.md  sota-usability-work-plan.md  testing.md
evals/: README.md  pyproject.toml
evals/fixtures/: semantic_embeddings.json
evals/src/quipu_evals/: __init__.py  analyze_answer_failures.py  artifacts.py  baselines.py  benchmarks.py  comparisons.py  core_client.py  core_runner.py  external.py  fake_client.py  graders.py  locomo.py  longmemeval.py  metrics.py  provider_clients.py  readiness.py  runner.py  scenarios.py
evals/suites/: quipu_synthetic.yaml
evals/tests/: test_synthetic.py
examples/cli-basic/: README.md
examples/langgraph/: README.md  agent.py
examples/mcp-claude-desktop/: README.md
examples/node-agent/: README.md
mcp/: README.md  package.json
protocol/: README.md
scripts/: check_format.py  install.sh  quipu_dashboard.py  quipu_proxy.py  run_tests.py
website/: index.html  memory-graph.js  styles.css
(+569 files in other folders)
