[project]
name = "quipu-evals"
version = "0.1.0"
description = "Evaluation harness for Quipu memory"
license = { text = "MIT" }
requires-python = ">=3.10"

[project.scripts]
quipu-eval = "quipu_evals.runner:main"
quipu-core-eval = "quipu_evals.core_runner:main"
quipu-benchmark = "quipu_evals.benchmarks:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
